# knowhub

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml
cpptest/: readme.md
cpptest/cvtest/: CMakeLists.txt  main.cc
cpptest/webserver/: CMakeLists.txt  main.cc
cpptest/webserver/config/: config.h  config.h.in
cpptest/webserver/data/: 1.txt
cpptest/webserver/include/: base.h  server.h
cpptest/webserver/lib/: base.h  server.h
cpptest/webserver/src/: CMakeLists.txt  server.cc
docker/: readme.md
gittset/: README.md
git使用/: README.md
gradio/: base.py
llm/: langechain_study.py  readme.md  test_openai.py
llm/LLMs-from-scratch/: test.ipynb
llm/LLMs-from-scratch/appendix-D/01_main-chapter-code/: appendix-D.ipynb
llm/LLMs-from-scratch/appendix-E/01_main-chapter-code/: appendix-E.ipynb
llm/LLMs-from-scratch/ch02/01_main-chapter-code/: ch02.ipynb
llm/LLMs-from-scratch/ch03/01_main-chapter-code/: ch03.ipynb  exercise-solutions.ipynb  multihead-attention.ipynb
llm/LLMs-from-scratch/ch03/02_bonus_efficient-multihead-attention/: mha-implementations.ipynb
llm/LLMs-from-scratch/ch03/03_understanding-buffers/: understanding-buffers.ipynb
llm/LLMs-from-scratch/ch04/01_main-chapter-code/: ch04.ipynb  exercise-solutions.ipynb
llm/LLMs-from-scratch/ch04/02_performance-analysis/: flops-analysis.ipynb
llm/LLMs-from-scratch/ch05/01_main-chapter-code/: ch05.ipynb  exercise-solutions.ipynb
llm/LLMs-from-scratch/ch05/02_alternative_weight_loading/: weight-loading-hf-safetensors.ipynb
llm/LLMs-from-scratch/ch05/06_user_interface/: app_orig.py  app_own.py  lib.py
llm/LLMs-from-scratch/ch05/07_gpt_to_llama/: converting-gpt-to-llama2.ipynb  (+1 more)
llm/LLMs-from-scratch/test/: main.py
llm/gptv1/: main.py  test.ipynb
llm/gptv1/cfg/: cfg.py  param.yaml
llm/gptv1/model/: gpt.py  modelv1.py
llm/gptv1/utils/: load_smss_dataset.py  lora.py  utils.py
llm/llm_qianfan/: test.py
llm/torchlightning/: example.py  readme.md
llm/torchlightning/model/: load_dataset.py  net.py
llm/utils/: selftemplate.py
other/: readme.md
other/python基础/: readme.md
pytest/: README.md  __init__.py  base.ipynb  pyproject.toml
pytest/example/: model.py  test.py
pythontest/: 1.csv
python基础/: base.ipynb
shell/: knowhub.sh  readme.md
ui/: README.md
weights/: readme.md
大模型/: langechain_study.py  readme.md  start.ipynb  study1.ipynb
(+2 files in other folders)
